<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <LinearLayout
        android:id="@+id/linearBaixo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
		android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/adicionar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/botao2"
            android:text="@string/add" />

        <Button
            android:id="@+id/descartar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/botao3"
            android:text="@string/discard" />

    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:layout_above="@+id/linearBaixo"
        >

     <LinearLayout
         android:id="@+id/linearCima"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" >

                 <TextView
            android:id="@+id/id_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/id_collection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />



        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/editor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/edition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/editionYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
         
        <TextView
            android:id="@+id/obsTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:text="@string/insertObservations"/>
        
            <EditText
                        android:id="@+id/insObsTxt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        />
        
        
    </LinearLayout>
    
    </ScrollView>
    
    
    
    
</RelativeLayout>